--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "dependencies": {
     "@tanstack/react-query": "^5.83.0",
     "axios": "^1.11.0",
+    "coockies": "^1.0.1",
+    "cookie": "^1.0.2",
     "formik": "^2.4.6",
     "izitoast": "^1.4.0",
     "next": "15.4.4",
